rl-return-policy

--- a/THESIS/02-automata.Rmd
+++ b/THESIS/02-automata.Rmd
@@ -158,7 +158,7 @@ The rules are allowed to be stochastic, assigning probabilities to cell state tr
 Updating functions are allowed to vary from cell to cell. A simple example is a CA with two rules distributed randomly throughout the lattice. On the other extreme case, simulations have been performed with random assignment of all Boolean functions with small number of inputs [@kauffman1984emergent].
 
 * Boolean Networks:
-A type of non-homogeneous CA with variable inputs per node [@alonso2011discrete].
+A type of non-homogeneous CA with emphasis on variable inputs per node [@alonso2011discrete].
 
 * Mobile CA:
 In this model some cells can move through the lattice. The mobile parts of the CA can be thought as robots or agents and their movement is dictated from an internal state that reflects the features of the local environment.
