--- a/THESIS/04-results.Rmd
+++ b/THESIS/04-results.Rmd
@@ -341,9 +341,9 @@ The choosen ANN architectures are in increasing order of complexity: A2, A1 and 
 
 Training for more iterations presumably would not increase significantly the performance of any experiment as it could be seen from the training dynamics plot (see Figure  \@ref(fig:reward-dynamics)).
 
-From the evaluation data it can be observed that the best performing runs have a lower _standard deviation_ to those that failed to learn (Figure \@ref(fig:sd-mean)), thus the better runs not only played better but they consistentily did it. Likewise, from the same data, three overall regions, in terms of _mean reward_ and _standard deviation_ can be seen. The first one groups the best runs together. The second groups the worst runs. The third one contains the Heuristic and the $g$ run. From the third region is interesting to notice that even so agent $g$ plays better than the heuristic it does it with a higher _standard deviation_, presumably because it performs really well in some enviroment states but really bad in others, besides $g$ used an _Unrolling_ of $10$ which could explain that some estimations of $Q$ values were biased with such large _Unrolling_.
+From the evaluation data it can be observed that the best performing runs have a lower _standard deviation_ to those that failed to learn (Figure \@ref(fig:sd-mean)), thus the better runs not only played better but they consistentily did it. Likewise, from the same data, three overall regions, in terms of _mean reward_ and _standard deviation_, can be seen. The first one groups the best runs together. The second groups the worst runs. The third one contains the Heuristic and the $g$ run. From the third region is interesting to notice that even so agent $g$ plays better than the heuristic it does it with a higher _standard deviation_, presumably because it performs really well in some enviroment states but badly in others, besides $g$ used an _Unrolling_ of $10$ which could explain that some estimations of $Q$ values were biased with such large _Unrolling_.
 
-To test for the robustness and maximization bias of the learned policies, the agents were also evaluated with $\epsilon$-greedy policies of $0.02$, $0.05$ and $0.10$. We did not find anything unexpedted, since all the agents that were better than the heurisitc only worsen their performance (Figure \@ref(fig:sd-mean-epsilon)).
+To test for the robustness and maximization bias of the learned policies, the agents were also evaluated with $\epsilon$-greedy policies of $0.02$, $0.05$ and $0.10$. We did not find anything unexpedted, since the performance of better than the heuristic agents deteriorated (Figure \@ref(fig:sd-mean-epsilon)).
 
 ### Benchmark Capabilities
 
