--- a/THESIS/_main.tex
+++ b/THESIS/_main.tex
@@ -393,7 +393,7 @@ Generalizations to the classical attributes of CA can be conceived (Ilachinski \
   Updating functions are allowed to vary from cell to cell. A simple example is a CA with two rules distributed randomly throughout the lattice. On the other extreme case, simulations have been performed with random assignment of all Boolean functions with small number of inputs (Kauffman \protect\hyperlink{ref-kauffman1984emergent}{1984}).
 \item
   Boolean Networks:
-  A type of non-homogeneous CA with variable inputs per node (Alonso-Sanz \protect\hyperlink{ref-alonso2011discrete}{2011}).
+  A type of non-homogeneous CA with emphasis on variable inputs per node (Alonso-Sanz \protect\hyperlink{ref-alonso2011discrete}{2011}).
 \item
   Mobile CA:
   In this model some cells can move through the lattice. The mobile parts of the CA can be thought as robots or agents and their movement is dictated from an internal state that reflects the features of the local environment.
