--- a/THESIS/references.bib
+++ b/THESIS/references.bib
@@ -456,3 +456,45 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
   pages={5},
   year={1936}
 }
+
+@article{bellemare2013arcade,
+  title={The arcade learning environment: An evaluation platform for general agents},
+  author={Bellemare, Marc G and Naddaf, Yavar and Veness, Joel and Bowling, Michael},
+  journal={Journal of Artificial Intelligence Research},
+  volume={47},
+  pages={253--279},
+  year={2013}
+}
+
+@article{risi2020chess,
+  title={From Chess and Atari to StarCraft and Beyond: How Game AI is Driving the World of AI},
+  author={Risi, Sebastian and Preuss, Mike},
+  journal={KI-K{\"u}nstliche Intelligenz},
+  volume={34},
+  number={1},
+  pages={7--17},
+  year={2020},
+  publisher={Springer}
+}
+
+@inproceedings{yang2015proceedings,
+  title={Proceedings of the Twenty-Fourth International Joint Conference on Artificial Intelligence, IJCAI 2015, Buenos Aires, Argentina, 25-31 July 2015},
+  author={Yang, Qiang and Wooldridge, Michael},
+  booktitle={Proceedings of the Twenty-Fourth International Joint Conference on Artificial Intelligence, IJCAI 2015, Buenos Aires, Argentina, 25-31 July 2015},
+  year={2015}
+}
+
+@article{badia2020agent57,
+  title={Agent57: Outperforming the atari human benchmark},
+  author={Badia, Adri{\`a} Puigdom{\`e}nech and Piot, Bilal and Kapturowski, Steven and Sprechmann, Pablo and Vitvitskyi, Alex and Guo, Daniel and Blundell, Charles},
+  journal={arXiv preprint arXiv:2003.13350},
+  year={2020}
+}
+
+@article{foley2018toybox,
+  title={Toybox: Better Atari Environments for Testing Reinforcement Learning Agents},
+  author={Foley, John and Tosch, Emma and Clary, Kaleigh and Jensen, David},
+  journal={arXiv preprint arXiv:1812.02850},
+  year={2018}
+}
+
